@@ -38,7 +38,7 @@
     __timepunct<_CharT>::__timepunct(size_t __refs) 
     : facet(__refs), _M_data(NULL)
     { 
-      _M_name_timepunct = _S_c_name;
+      _M_name_timepunct = _S_get_c_name();
       _M_initialize_timepunct(); 
     }
 
@@ -46,7 +46,7 @@
     __timepunct<_CharT>::__timepunct(__cache_type* __cache, size_t __refs) 
     : facet(__refs), _M_data(__cache)
     { 
-      _M_name_timepunct = _S_c_name;
+      _M_name_timepunct = _S_get_c_name();
       _M_initialize_timepunct(); 
     }
 
@@ -64,7 +64,7 @@
   template<typename _CharT>
     __timepunct<_CharT>::~__timepunct()
     { 
-      if (_S_c_name != _M_name_timepunct)
+      if (_M_name_timepunct != _S_get_c_name())
 	delete [] _M_name_timepunct;
       delete _M_data;
       _S_destroy_c_locale(_M_c_locale_timepunct); 
